Also see Moose::Manual::Delta for more details of, and workarounds
for, noteworthy changes.

{{$NEXT}}

  [ENHANCEMENTS]

  * The super() subroutine now carps if you pass it arguments. These arguments
    are always ignored, but we used to ignore them silently. RT #77383.

  [BUG FIXES]

  * Fix false positive when checking for circular references for modules that
    use the "also" parameter with Moose::Exporter. Reported by Jon
    Swartz. Fixed by Matthew Wickline. RT #63818.

  * Ensure that the Moose::Exporter-generated init_meta returns the same value
    that it did previously. This isn't really a bug, since the return value has
    never been tested or documented, but since the generated init_meta is
    nothing more than a compatibility shim at this point, there's no reason to
    not make it as compatible as possible. Reported by Moritz Onken. (doy)

2.0601 Tue, May 01, 2012

  [BUG FIXES]

  * Fix init_meta order when multiple also packages are specified (this matters
    when one of them is being used to actually initalize the metaclass,
    typically with also => 'Moose'). Reported by Randy Stauner. (doy)

2.0600 Sun, Apr 29, 2012

  [OTHER]

  * Releasing 2.0502 as stable.

2.0502-TRIAL Wed, Apr 25, 2012

  [OTHER]

  * The Test::DependentModules test now covers a much wider range of downstream
    dependents (all of them in fact, for some definition of "all"). This should
    allow us to track inadvertent backwards compatibility breakages much more
    effectively. (doy)

  * A few test tweaks to avoid spurious failures. (doy)

2.0501-TRIAL Tue, Apr 03, 2012

  [BUG FIXES]

  * Avoid syntax errors on pre-5.14. (doy)

2.0500-TRIAL Tue, Apr 03, 2012

  [NEW FEATURES]

  * Class::MOP::Class now has methods for introspecting and modifying the
    overloaded operators for a class. (doy)

  [ENHANCEMENTS]

  * The cookbook recipes have all been renamed. Instead of numbered recipes
    (Basics::Recipe1), we now have descriptive names